# mediamp

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
buildSrc/: build.gradle.kts  settings.gradle.kts
catalog/: build.gradle.kts
ci-helper/: build.gradle.kts  cleanup-temp-files-macos.sh  free-space-macos.sh  install-ffmpeg-deps-ubuntu.sh  install-mpv-deps-ubuntu.sh  release-template.md
docs/: detailed-installation.md  native-build-cache.md
gradle/: libs.versions.toml
mediamp-all/: build.gradle.kts
mediamp-api/: build.gradle.kts
mediamp-api-test/: build.gradle.kts
mediamp-avkit/: build.gradle.kts
mediamp-avkit-compose/: build.gradle.kts  gradle.properties
mediamp-backend-exoplayer/: build.gradle.kts
mediamp-backend-exoplayer-compose/: build.gradle.kts
mediamp-backend-mpv/: CMakeLists.txt  build.gradle.kts
mediamp-backend-vlc/: build.gradle.kts
mediamp-backend-vlc-compose/: build.gradle.kts
mediamp-cef/: build.gradle.kts
mediamp-compose/: build.gradle.kts
mediamp-core/: build.gradle.kts
mediamp-dummy/: build.gradle.kts
mediamp-exoplayer/: build.gradle.kts
mediamp-exoplayer-compose/: build.gradle.kts
mediamp-ffmpeg/: API-zh.md  API.md  README.md  build.gradle.kts  fix-prepare-cli-args-on-win-and-clean-up.patch  fix-prepare-cli-args-on-windows.patch  ios-embed-framework.md
mediamp-internal-utils/: build.gradle.kts
mediamp-mpv/: CMakeLists.txt  build.gradle.kts  dependency.md  mpv-d3d11-rendering.md  render_d3d11.patch
mediamp-mpv-compose/: build.gradle.kts
mediamp-mpv-demo/: README.md  build-native.sh  build.gradle.kts
mediamp-mpv/libmpv/include/libavcodec/: jni.h
mediamp-mpv/libmpv/include/mpv/: client.h  render.h
mediamp-mpv/libmpv/lib/macos/arm64/: libSDL2-2.0.0.dylib  libXau.6.0.0.dylib  libaom.3.11.0.dylib  libass.9.dylib  libavfilter.10.4.100.dylib  libavformat.61.7.100.dylib  libbluray.2.dylib  libbrotlidec.1.1.0.dylib  libdav1d.7.dylib  libfontconfig.1.dylib  libfreetype.6.dylib  libgif.7.2.0.dylib  libgnutls.30.dylib  libharfbuzz.0.dylib  libhogweed.6.9.dylib  libhwy.1.2.0.dylib  libidn2.0.dylib  libjpeg.8.3.2.dylib  libjxl.0.11.1.dylib  liblcms2.2.dylib  libluajit-5.1.2.1.1734355927.dylib  libmbedcrypto.3.6.2.dylib  libogg.0.8.5.dylib  libopenjp2.2.5.3.dylib  libp11-kit.0.dylib  libpcre2-8.0.dylib  libpng16.16.dylib  librav1e.0.7.1.dylib  libsodium.26.dylib  libssl.3.dylib  libswresample.5.3.100.dylib  libtheoraenc.1.dylib  libunibreak.6.dylib  libxcb-shape.0.0.0.dylib  libxcb-shm.0.0.0.dylib  libxcb-xfixes.0.0.0.dylib  libxcb.1.1.0.dylib
mediamp-mpv/libmpv/lib/macos/x86_64/: libXau.6.dylib  libaribb24.0.dylib  libass.9.dylib  libavutil.59.39.100.dylib  libb2.1.dylib  libbluray.2.dylib  libfribidi.0.dylib  libgif.7.2.0.dylib  libharfbuzz.0.dylib  libhwy.1.2.0.dylib  libidn2.0.dylib  libintl.8.dylib  libjpeg.8.3.2.dylib  libjxl.0.11.1.dylib  liblcms2.2.dylib  libleptonica.6.dylib  libmbedcrypto.3.6.2.dylib  libmujs.dylib  libnettle.8.9.dylib  libogg.0.8.5.dylib  libopencore-amrnb.0.dylib  libopencore-amrwb.0.dylib  libopus.0.dylib  libpcre2-8.0.dylib  libplacebo.349.dylib  libpng16.16.dylib  librist.4.dylib  librubberband.3.dylib  libsodium.26.dylib  libsrt.1.5.4.dylib  libssh.4.10.1.dylib  libswscale.8.3.100.dylib  libtheoraenc.1.dylib  libtiff.6.dylib  libunibreak.6.dylib  libvmaf.3.dylib  libvorbis.0.dylib  libwebp.7.1.10.dylib  libxcb-shape.0.0.0.dylib  libzimg.2.dylib
mediamp-mpv/libmpv/lib/windows/x86_64/: avcodec-61.def  avcodec-61.lib  libmpv-2.def  libmpv-2.lib  mpv.com  swscale-8.def  swscale-8.lib
mediamp-mpv/src/androidMain/kotlin/: LibraryLoader.android.kt  MPVHandle.android.kt  MpvFramePreview.android.kt  MpvMediampPlayer.android.kt  MpvMediampPlayerFactory.android.kt  Platform.android.kt  package.kt
mediamp-mpv/src/androidMain/kotlin/compose/: MpvMediampPlayerSurface.android.kt
mediamp-mpv/src/commonMain/kotlin/: EventListener.kt  LibraryLoader.kt  MPVHandle.kt  MPVLog.kt  MpvMediampPlayer.kt  Platform.kt  RenderUpdateListener.kt  package.kt
mediamp-mpv/src/cpp/: event_listener.cpp  glx_context_provider.cpp  jni.cpp  log.cpp  main.cpp  method_cache.cpp  mpv_handle_t.cpp  offscreen.cpp  opengl_extra.cpp  render_d3d11.cpp  render_glx.cpp  render_macos.mm
mediamp-mpv/src/cpp/include/: compatible_thread.h  glx_context_provider.h  log.h  method_cache.h  mpv_handle_t.h
mediamp-mpv/src/desktopMain/kotlin/: LibraryLoader.desktop.kt  MPVHandle.desktop.kt  MpvFramePreview.desktop.kt  MpvMediampPlayer.desktop.kt  Platform.desktop.kt
mediamp-mpv/src/desktopMain/kotlin/compose/: FrameInterpolator.kt  MpvMediampPlayerSurface.desktop.kt
mediamp-mpv/src/desktopMain/kotlin/internal/: MpvPreviewDecoder.kt  MpvRenderContextLifecycle.kt  MpvSurfaceDrawResolver.kt  MpvSurfaceRing.kt  OpenGLRenderContextLifecycle.kt
mediamp-mpv/src/desktopMain/kotlin/utils/: OpenGLComponentProvider.kt  SkiaDirectXInterop.kt  SkiaMetalInterop.kt  SkiaOpenGLInterop.kt  SkiaRenderDeviceInterop.kt  WindowUtils.kt
mediamp-mpv/src/desktopTest/kotlin/: MpvFramePreviewTest.kt  MpvHeadlessEofTest.kt  MpvLibraryLoaderLogicTest.kt  MpvMediampPlayerSmokeTest.kt  MpvPlaybackStateMachineTest.kt  MpvZeroConfigTest.kt  SkikoLinuxOpenGLReflectionLayoutTest.kt
mediamp-mpv/src/desktopTest/kotlin/utils/: OpenGLRenderEnvironmentTest.kt
mediamp-mpv/src/iosMain/kotlin/: LibraryLoader.ios.kt  MPVHandle.ios.kt  MpvMediampPlayer.ios.kt  Platform.ios.kt
mediamp-mpv/src/jvmMain/kotlin/: EventListener.kt  GLExt.kt  LibraryLoader.kt  MPVHandle.kt  MpvBufferRenderer.kt  MpvMediampPlayer.jvm.kt  MpvMediampPlayerFactory.kt  MpvOffscreenSurface.kt  MpvPlayerFeatures.kt  OffscreenGL.kt
mediamp-mpv/src/jvmMain/kotlin/compose/: MpvMediampPlayerSurface.kt  MpvMediampPlayerSurfaceProvider.kt
mediamp-mpv/src/jvmMain/kotlin/internal/: MpvPlaybackStateMachine.kt
mediamp-native-loader/: build.gradle.kts
mediamp-preview/: build.gradle.kts
mediamp-source-kotlinx-io/: build.gradle.kts
mediamp-source-ktxio/: build.gradle.kts
mediamp-test/: build.gradle.kts
(+673 files in other folders)
